# octowrap

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/octowrap/: __init__.py  __main__.py  cli.py  config.py  rewrap.py
tests/: conftest.py  test_cli.py  test_config.py  test_heuristics.py  test_inline.py  test_parsing.py  test_process_file.py  test_rewrap.py  test_ui.py
