[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octowrap"
version = "0.3.0"
description = "Rewrap Python # comments to a specified line length"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cameron Urban" }
]
keywords = ["formatting", "comments", "refactoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "codespell>=2.4.0",
    "docformatter>=1.7.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[project.scripts]
octowrap = "octowrap.cli:main"

[project.urls]
Repository = "https://github.com/camUrban/octowrap"

[tool.pytest.ini_options]
addopts = "--cov=octowrap --cov-report=term-missing"

[tool.coverage.run]
source = ["octowrap"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.codespell]
ignore-words = ".codespell-ignore.txt"
skip = "docs/_build/*,*.dat"

[tool.docformatter]
black = true
recursive = true
